--- a/Pesquisar-Imoveis/pesquisar-imoveis.html
+++ b/Pesquisar-Imoveis/pesquisar-imoveis.html
@@ -3,11 +3,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" src="reset.css">
     <link rel="stylesheet" href="pesquisar-imoveis.css">
-    <title>Document</title>
+    <link rel="icon" type="imagem/png" href="../imagens-site/logo-parcial-negativa.png" />
+    <title>Dreams - Imobiliaria</title>
 </head>
-<body>
+<body onload="javascript:carregarImoveis([0, 0], [], 'Todas', 'Todos')">
+    <!-- <body> -->
+
+    <header>
+
+    </header>
+
+    <main>
+
+
+        <h2>Área construida</h2>
+        <label>Mínimo<input id="inAreaMinima" type="number"></label>
+        <label>Máximo<input id="inAreaMaxima" type="number"></label>
+
+        <h2>Tipo do imóvel</h2>
+        <label><img src="../imagens-site/icon-apartamento.png"><input id="cbApartamento" type="checkbox">Apartamento</label>
+        <label><img src="../imagens-site/icon-casa.png"><input id="cbCasa" type="checkbox">Casa</label>
+        <label><img src="../imagens-site/icon-cabin.png"><input id="cbSitio" type="checkbox">Sítio</label>
+        <label><img src="../imagens-site/icon-loja.png"><input id="cbLoja" type="checkbox">Loja</label>
+        <label><img src="../imagens-site/icon-duplex.png"><input id="cbDuplex" type="checkbox">Duplex</label>
+        <label><img src="../imagens-site/icon-plot.png"><input id="cbTerreno" type="checkbox">Terreno</label>
+
+        <h2>Cidade</h2>
+        <select id="inCidade">
+            <option value="Todas">Todas</option>
+        </select>
+
+        <h2>Bairro</h2>
+        <select id="inBairro">
+            <option value="Todos">Todos</option>
+        </select>
+
+        <input id="btFiltrar" type="submit" value="Filtrar imóveis">
+
+        <section class="imoveis">
+
+            <!-- <div class="imovel">
+                <img class="img-imovel" src="../imagens-imoveis/apartamento 027.jpg" alt="">
+                <div class="informacoes-imovel">
+                    <p class="tipo-imovel">Apartamento</p>
+                    <p class="area-construida-imovel">Área construida: 122m²</p>
+                    <p class="area-total-imovel">Área total: 0m²</p>
+                    <p class="endereco-imovel">Rua João Marcon, 283 - 0, bairro Boituva, CEP: 18550-000</p>
+                </div>
+            </div> -->
+
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
     
     <script src="../vetores.js"></script>
 </body>
