--- a/Home/home.html
+++ b/Home/home.html
@@ -31,7 +31,7 @@
             <img class="img-principal" src="principal.png" alt="">
             <h1 class="titulo-principal"> "Onde seus sonhos viram realidade" </h1>
         </section>
-      <section>
+      <section class="secundaria">
         <h1 class="dreams"> Sobre a Dreams</h1>
         <p class="dreams-escrita">Nossa empresa foi fundada em meados de 1798, quando Dom Pedro I chegouao Brasil, e com uma grande jogada comercial o nosso fundador Luisinério que continua vivo até os dias de hoje criou essa empresa para vender a família real portuguesa sua primeira casa no Brasil.</p>
 
