Criação do footer

--- a/Contato/contato.html
+++ b/Contato/contato.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,18 +8,43 @@
   <link rel="stylesheet" href="../reset.css">
   <title>Contato</title>
 </head>
+
 <body>
-  <footer>
-    <div class="box-footer">
-    <img src="../imagens-site/logo-parcial-negativa.png" class="logo-footer">
+
+  <header>
+    <section class="box-header">
+        <img src="../imagens-site/logo-positivo.png" class="logo" alt="">
+        
+        <nav class="menu-header">
+            <a href="#header-home">Home</a>
+            <a href="../Pesquisar-Imoveis/pesquisar-imoveis.html">Pesquisar Imóveis</a>
+            <a href="../Adicionar-Imoveis/adicionar-imoveis.html">Adicionar Imóvel</a>
+            <a href="../Contato/contato.html">Contato</a>
+        </nav>
+
+    </section>
     
-        <nav class="menu-footer">
+</header>
+
+<div class="espacamento">.</div>
+
+  <footer>
+
+    <section class="box-footer">
+
+      <img src="../imagens-site/logo-parcial-negativa.png" class="logo-footer">
+
+      <nav class="menu-footer">
         <a href="../Home/home.html">Home</a>
         <a href="../Adicionar-Imoveis/adicionar-imoveis.html">Adicionar-Imoveis</a>
         <a href="../Pesquisar-Imoveis/pesquisar-imoveis.html">Pesquisar-Imoveis</a>
         <a href="#top-contato">Contato</a>
-    </nav>
-    </div>
+      </nav>
+
+    </section>
+
   </footer>
+
 </body>
+
 </html>
