html da pagina contato

--- a/Contato/contato.html
+++ b/Contato/contato.html
@@ -13,20 +13,48 @@
 
   <header>
     <section class="box-header">
-        <img src="../imagens-site/logo-positivo.png" class="logo" alt="">
-        
-        <nav class="menu-header">
-            <a href="#header-home">Home</a>
-            <a href="../Pesquisar-Imoveis/pesquisar-imoveis.html">Pesquisar Imóveis</a>
-            <a href="../Adicionar-Imoveis/adicionar-imoveis.html">Adicionar Imóvel</a>
-            <a href="../Contato/contato.html">Contato</a>
-        </nav>
+      <img src="../imagens-site/logo-positivo.png" class="logo" alt="">
+
+      <nav class="menu-header">
+        <a href="../Home/home.html">Home</a>
+        <a href="../Pesquisar-Imoveis/pesquisar-imoveis.html">Pesquisar Imóveis</a>
+        <a href="../Adicionar-Imoveis/adicionar-imoveis.html">Adicionar Imóvel</a>
+        <a href="../Contato/contato.html">Contato</a>
+      </nav>
 
     </section>
-    
-</header>
 
-<div class="espacamento">.</div>
+  </header>
+
+  <main>
+
+    <p class="contato-titulo">Entre em contato</p>
+    <div class="div-contato">
+      <section class="contato-preencher">
+        <p>Nome e Sobrenome: 
+        <input type="text" name="preencher"></p>
+        <p><E-mail>E-mail: </E-mail>
+        <input type="text" name="preencher"></p>
+        <p>Telefone: 
+        <input type="text" name="preencher"></p>
+        <p>Mensagem: 
+        <input type="text" class="preencher-mensagem"></p>
+      </section>
+
+      <section class="contato-checked">
+        <p class="titulo-checkbox">Motivo da interação: </p>
+        <p><input type="checkbox" name="checkbox"> Avaliando um Produto</p>
+        <p><input type="checkbox" name="checkbox"> Sugestões para melhorias no geral </p>
+        <p><input type="checkbox" name="checkbox"> Problemas em relação a compras </p>
+        <p><input type="checkbox" name="checkbox"> Criticar atendimento </p>
+        <p><input type="checkbox" name="checkbox"> Outros: </p>
+      </section>
+    </div>
+    <input type="button" class="btEnviar" value="Enviar Formulário">
+
+  </main>
+
+  <div class="espacamento">.</div>
 
   <footer>
 
