--- a/Contato/contato.html
+++ b/Contato/contato.html
@@ -16,7 +16,7 @@
         <img src="../imagens-site/logo-positivo.png" class="logo" alt="">
         
         <nav class="menu-header">
-            <a href="#header-home">Home</a>
+            <a href="../Home/home.html">Home</a>
             <a href="../Pesquisar-Imoveis/pesquisar-imoveis.html">Pesquisar Imóveis</a>
             <a href="../Adicionar-Imoveis/adicionar-imoveis.html">Adicionar Imóvel</a>
             <a href="../Contato/contato.html">Contato</a>
@@ -27,8 +27,11 @@
 </header>
 
 <div class="espacamento">.</div>
+<div id="top-contato"> </div>
 
-  <footer>
+  <main></main>
+
+<footer>
 
     <section class="box-footer">
 
