alteração em contato

--- a/Contato/contato.html
+++ b/Contato/contato.html
@@ -32,13 +32,13 @@
     <div class="div-contato">
       <section class="contato-preencher">
         <p>Nome e Sobrenome: 
-        <input type="text" name="preencher"></p>
+        <input type="text" name="preencher" required></p>
         <p><E-mail>E-mail: </E-mail>
-        <input type="text" name="preencher"></p>
+        <input type="email" name="preencher" required></p>
         <p>Telefone: 
-        <input type="text" name="preencher"></p>
-        <p>Mensagem: 
-        <input type="text" class="preencher-mensagem"></p>
+        <input type="tel" name="preencher" required></p>
+        <p>Mensagem: </p>
+        <textarea class="area-mensagem" cols="30" rows="10" required></textarea>
       </section>
 
       <section class="contato-checked">
