alterações na página de contato

--- a/Contato/contato.html
+++ b/Contato/contato.html
@@ -26,71 +26,144 @@
   </header>
 
   <div id="top-contato">.</div>
-
   <main>
-    <form class="form">
-      <div class="contato-titulo">
-        <h1>Entre em Contato</h1>
-      </div>
-
-      <div class="input-group">
-        <div class="input-box">
-          <label for="nomeSobrenome">Nome e Sobrenome: </label>
-          <input id="nomeSobrenome" type="text" name="nomeSobrenome" placeholder="Digite seu nome e sobrenome" required>
+    <section class="section-form form-contato">
+      <form class="form">
+        <div class="contato-titulo">
+          <h1>Entre em Contato</h1>
         </div>
 
-        <div class="input-box">
-          <label for="email">E-mail: </label>
-          <input id="email" type="email" name="email" placeholder="Digite seu e-mail" required>
-        </div>
-
-        <div class="input-box">
-          <label for="numero">Celular: </label>
-          <input id="inNumero" type="tel" name="numero" placeholder="(xx) xxxx-xxxx" required>
-        </div>
-
-        <div class="input-mensagem">
-          <p><label for="mensagem">Mensagem: </label></p>
-          <textarea name="mensagem" id="mensagem" cols="50" rows="12"></textarea>
-        </div>
-      </div>
-
-      <div class="checked-area">
-        <div class="checked-titulo">
-          <h6>Motivo da Interação: </h6>
-        </div>
-
-        <div class="checked-grupo">
-          <div class="inChecked">
-            <input id="avaliarUmProduto" type="radio" name="opcoes">
-            <label for="avaliarUmProduto">Avaliar um produto</label>
+        <div class="input-group">
+          <div class="input-box">
+            <label for="nomeSobrenome">Nome e Sobrenome: </label>
+            <input id="nomeSobrenome" type="text" name="nomeSobrenome" placeholder="Digite seu nome e sobrenome"
+              required>
           </div>
 
-          <div class="inChecked">
-            <input id="criticarAtendimento" type="radio" name="opcoes">
-            <label for="criticarAtendimento">Criticar atendimento</label>
+          <div class="input-box">
+            <label for="email">E-mail: </label>
+            <input id="email" type="email" name="email" placeholder="Digite seu e-mail" required>
           </div>
 
-          <div class="inChecked">
-            <input id="problemasEmRelacaoACompras" type="radio" name="opcoes">
-            <label for="problemasEmRelacaoACompras">Problemas em relação a compras</label>
+          <div class="input-box">
+            <label for="numero">Celular: </label>
+            <input id="inNumero" type="tel" name="numero" placeholder="(xx) xxxx-xxxx" required>
           </div>
 
-          <div class="inChecked">
-            <input id="sugestoesParaMelhoriasNoGeral" type="radio" name="opcoes">
-            <label for="sugestoesParaMelhoriasNoGeral">Sugestões para melhorias no geral</label>
-          </div>
 
-          <div class="inChecked">
-            <input id="outros" type="radio" name="opcoes">
-            <label for="outros">Outros </label>
+          <div class="input-mensagem">
+            <p><label for="mensagem">Mensagem: </label></p>
+            <textarea name="mensagem" id="mensagem" cols="50" rows="12"></textarea>
           </div>
-
         </div>
-      </div>
 
-      <input type="submit" class="bt-enviar">
-    </form>
+        <div class="checked-area">
+          <div class="checked-titulo">
+            <h6>Motivo da Interação: </h6>
+          </div>
+
+          <div class="checked-grupo">
+            <div class="inChecked">
+              <input id="avaliarUmProduto" type="radio" name="opcoes">
+              <label for="avaliarUmProduto">Avaliar um produto</label>
+            </div>
+
+            <div class="inChecked">
+              <input id="criticarAtendimento" type="radio" name="opcoes">
+              <label for="criticarAtendimento">Criticar atendimento</label>
+            </div>
+
+            <div class="inChecked">
+              <input id="problemasEmRelacaoACompras" type="radio" name="opcoes">
+              <label for="problemasEmRelacaoACompras">Problemas em relação a compras</label>
+            </div>
+
+            <div class="inChecked">
+              <input id="receberOfertas" type="checkbox" name="opcoes">
+              <label for="receberOfertas">Receber oferta de imóveis</label>
+            </div>
+
+            <div class="inChecked">
+              <input id="outros" type="radio" name="opcoes">
+              <label for="outros">Outros </label>
+            </div>
+
+          </div>
+        </div>
+
+        <input type="submit" class="bt-enviar">
+      </form>
+    </section>
+
+    <div id="top-contato">.</div>
+
+    <section class="section-form form-ofertas desaparecendo">
+      <form class="form">
+        <div class="contato-titulo">
+          <h1>Entre em Contato</h1>
+        </div>
+
+        <div class="input-group">
+          <div class="input-box">
+            <label for="nomeSobrenome">Nome e Sobrenome: </label>
+            <input id="nomeSobrenome" type="text" name="nomeSobrenome" placeholder="Digite seu nome e sobrenome"
+              required>
+          </div>
+
+          <div class="input-box">
+            <label for="email">E-mail: </label>
+            <input id="email" type="email" name="email" placeholder="Digite seu e-mail" required>
+          </div>
+
+          <div class="input-box">
+            <label for="numero">Celular: </label>
+            <input id="inNumero" type="tel" name="numero" placeholder="(xx) xxxx-xxxx" required>
+          </div>
+
+
+          <div class="input-mensagem">
+            <p><label for="mensagem">Mensagem: </label></p>
+            <textarea name="mensagem" id="mensagem" cols="50" rows="12"></textarea>
+          </div>
+        </div>
+
+        <div class="checked-area">
+          <div class="checked-titulo">
+            <h6>Motivo da Interação: </h6>
+          </div>
+
+          <div class="checked-grupo">
+            <div class="inChecked">
+              <input id="avaliarUmProduto" type="radio" name="opcoes">
+              <label for="avaliarUmProduto">Avaliar um produto</label>
+            </div>
+
+            <div class="inChecked">
+              <input id="criticarAtendimento" type="radio" name="opcoes">
+              <label for="criticarAtendimento">Criticar atendimento</label>
+            </div>
+
+            <div class="inChecked">
+              <input id="problemasEmRelacaoACompras" type="radio" name="opcoes">
+              <label for="problemasEmRelacaoACompras">Problemas em relação a compras</label>
+            </div>
+
+            <div class="inChecked">
+              <input id="sugestoesParaMelhoriasNoGeral" type="radio" name="opcoes">
+              <label for="sugestoesParaMelhoriasNoGeral">Sugestões para melhorias no geral</label>
+            </div>
+
+            <div class="inChecked">
+              <input id="outros" type="radio" name="opcoes">
+              <label for="outros">Outros </label>
+            </div>
+
+          </div>
+        </div>
+
+        <input type="submit" class="bt-enviar">
+      </form>
+    </section>
   </main>
 
   <footer>
