Refinamento do js da página pesquisarImoveis

--- a/Pesquisar-Imoveis/pesquisar-imoveis.html
+++ b/Pesquisar-Imoveis/pesquisar-imoveis.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="imagem/png" href="../imagens-site/logo-parcial-negativa.png" />
     <title>Dreams - Imobiliaria</title>
 </head>
-<body onload="javascript:carregarImoveis([0, 0], [], 'Todas', 'Todos')">
+<body onload="javascript:carregarImoveis([0, 0], [], 'Todas', 'Todos'),conferirCidades()">
     <!-- <body> -->
 
     <header>
@@ -128,6 +128,6 @@
     
       </footer>
     
-    <script src="../vetores.js"></script>
+    <script src="pesquisarImoveis.js"></script>
 </body>
 </html>
