Repaginada no visual do site

--- a/Contato/contato.html
+++ b/Contato/contato.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="contato.css">
   <link rel="stylesheet" href="../reset.css">
-  <title>Contato</title>
+  <link rel="stylesheet" href="../style-geral.css">
+  <link rel="stylesheet" href="contato.css">
+  <link rel="icon" type="imagem/png" href="../imagens-site/logo-parcial-negativa.png" />
+  <title>Dreams - Imobiliaria</title>
 </head>
 
 <body>
@@ -17,7 +19,6 @@
       <nav class="menu-header">
         <a href="../Home/home.html">Home</a>
         <a href="../Pesquisar-Imoveis/pesquisar-imoveis.html">Pesquisar Imóveis</a>
-        <a href="../Adicionar-Imoveis/adicionar-imoveis.html">Adicionar Imóvel</a>
         <a href="#top-contato">Contato</a>
       </nav>
 
@@ -174,7 +175,6 @@
 
       <nav class="menu-footer">
         <a href="../Home/home.html">Home</a>
-        <a href="../Adicionar-Imoveis/adicionar-imoveis.html">Adicionar-Imoveis</a>
         <a href="../Pesquisar-Imoveis/pesquisar-imoveis.html">Pesquisar-Imoveis</a>
         <a href="#top-contato">Contato</a>
       </nav>
