--- a/Home/home.html
+++ b/Home/home.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
     <link rel="stylesheet" href="../reset.css">
+    <link rel="stylesheet" href="../style-geral.css">
     <link rel="stylesheet" href="home.css">
+    <link rel="icon" type="imagem/png" href="../imagens-site/logo-parcial-negativa.png" />
+    <title>Dreams - Imobiliaria</title>
 </head>
 
 <body>
@@ -17,7 +19,6 @@
             <nav class="menu-header">
                 <a href="#top-home">Home</a>
                 <a href="../Pesquisar-Imoveis/pesquisar-imoveis.html">Pesquisar Imóveis</a>
-                <a href="../Adicionar-Imoveis/adicionar-imoveis.html">Adicionar Imóvel</a>
                 <a href="../Contato/contato.html">Contato</a>
             </nav>
 
@@ -73,12 +74,6 @@
                 <p>Venda de Terrenos</p>
             </div>
 
-
-
-
-
-
-
         </section>
 
 
@@ -92,19 +87,14 @@
             <img src="../imagens-site/logo-parcial-negativa.png" class="logo-footer">
 
             <nav class="menu-footer">
-                <a href="../Home/home.html">Home</a>
-                <a href="../Adicionar-Imoveis/adicionar-imoveis.html">Adicionar-Imoveis</a>
+                <a href="#top-home">Home</a>
                 <a href="../Pesquisar-Imoveis/pesquisar-imoveis.html">Pesquisar-Imoveis</a>
-                <a href="#top-contato">Contato</a>
+                <a href="../Contato/contato.html">Contato</a>
             </nav>
 
         </section>
 
     </footer>
-
-
-
-
 
 
 </body>
