--- a/Contato/contato.html
+++ b/Contato/contato.html
@@ -80,13 +80,13 @@
             </div>
 
             <div class="inChecked">
-              <input id="receberOfertas" type="checkbox" name="opcoes">
-              <label for="receberOfertas">Receber oferta de imóveis</label>
+              <input id="outros" type="radio" name="opcoes">
+              <label for="outros">Outros </label>
             </div>
 
             <div class="inChecked">
-              <input id="outros" type="radio" name="opcoes">
-              <label for="outros">Outros </label>
+              <input id="receberOfertas" type="checkbox" name="opcoes">
+              <label for="receberOfertas">Receber oferta de imóveis</label>
             </div>
 
           </div>
@@ -98,7 +98,7 @@
 
     <div id="top-contato">.</div>
 
-    <section class="section-form form-ofertas desaparecendo">
+    <section class="section-form form-ofertas">
       <form class="form">
         <div class="contato-titulo">
           <h1>Entre em Contato</h1>
