criacao dos cookies

--- a/Pesquisar-Imoveis/pesquisar-imoveis.html
+++ b/Pesquisar-Imoveis/pesquisar-imoveis.html
@@ -18,6 +18,7 @@
             
             <nav class="menu-header">
                 <a href="../Home/home.html">Home</a>
+                <a href="../Adicionar-imoveis/adicionar-imoveis.html">Adicionar Imóveis</a>
                 <a href="#top-pesquisa">Pesquisar Imóveis</a>
                 <a href="../Contato/contato.html">Contato</a>
             </nav>
@@ -87,6 +88,7 @@
         <div class="botoes">
             <input class="bt bt-filtrar" id="btFiltrar" type="submit" value="Filtrar imóveis">
             <input class="bt bt-Limpar" id="btLimpar" type="button" value="Limpar Filtros">
+            <input class="bt bt-teste" id="btTeste" type="button" value="Teste">
         </div>
 
         <div class="qtdImoveis">
