--- a/Pesquisar-Imoveis/pesquisar-imoveis.html
+++ b/Pesquisar-Imoveis/pesquisar-imoveis.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="imagem/png" href="../imagens-site/logo-parcial-negativa.png" />
     <title>Dreams - Imobiliaria</title>
 </head>
-<body onload="javascript:conferirCidades(),carregarImoveis([0, 0], [], 'Todas', 'Todos')">
+<body onload="javascript:carregarNovosImoveis(),conferirCidades(),carregarImoveis([0, 0], [], 'Todas', 'Todos')">
     <!-- <body> -->
         
     <header>
@@ -88,7 +88,6 @@
         <div class="botoes">
             <input class="bt bt-filtrar" id="btFiltrar" type="submit" value="Filtrar imóveis">
             <input class="bt bt-Limpar" id="btLimpar" type="button" value="Limpar Filtros">
-            <input class="bt bt-teste" id="btTeste" type="button" value="Teste">
         </div>
 
         <div class="qtdImoveis">
