Adição da pagina addImoveis nos headers e footers

--- a/Adicionar-imoveis/adicionar-imoveis.html
+++ b/Adicionar-imoveis/adicionar-imoveis.html
@@ -115,7 +115,8 @@
 
     <nav class="menu-footer">
       <a href="../Home/home.html">Home</a>
-      <a href="#top-pesquisa">Pesquisar-Imoveis</a>
+      <a href="#top-adicionar">Adicionar Imóveis</a>
+      <a href="../Pesquisar-Imoveis/pesquisar-imoveis.html">Pesquisar-Imoveis</a>
       <a href="../Contato/contato.html">Contato</a>
     </nav>
 
