--- a/Contato/contato.html
+++ b/Contato/contato.html
@@ -18,6 +18,7 @@
 
       <nav class="menu-header">
         <a href="../Home/home.html">Home</a>
+        <a href="../Adicionar-imoveis/adicionar-imoveis.html">Adicionar Imóveis</a>
         <a href="../Pesquisar-Imoveis/pesquisar-imoveis.html">Pesquisar Imóveis</a>
         <a href="#top-contato">Contato</a>
       </nav>
@@ -175,6 +176,7 @@
 
       <nav class="menu-footer">
         <a href="../Home/home.html">Home</a>
+        <a href="../Adicionar-imoveis/adicionar-imoveis.html">Adicionar Imóveis</a>
         <a href="../Pesquisar-Imoveis/pesquisar-imoveis.html">Pesquisar-Imoveis</a>
         <a href="#top-contato">Contato</a>
       </nav>
