--- a/Home/home.html
+++ b/Home/home.html
@@ -18,6 +18,7 @@
 
             <nav class="menu-header">
                 <a href="#top-home">Home</a>
+                <a href="../Adicionar-imoveis/adicionar-imoveis.html">Adicionar Imóveis</a>
                 <a href="../Pesquisar-Imoveis/pesquisar-imoveis.html">Pesquisar Imóveis</a>
                 <a href="../Contato/contato.html">Contato</a>
             </nav>
@@ -88,6 +89,7 @@
 
             <nav class="menu-footer">
                 <a href="#top-home">Home</a>
+                <a href="../Adicionar-imoveis/adicionar-imoveis.html">Adicionar Imóveis</a>
                 <a href="../Pesquisar-Imoveis/pesquisar-imoveis.html">Pesquisar-Imoveis</a>
                 <a href="../Contato/contato.html">Contato</a>
             </nav>
