--- a/Pesquisar-Imoveis/pesquisar-imoveis.html
+++ b/Pesquisar-Imoveis/pesquisar-imoveis.html
@@ -95,19 +95,15 @@
         </div>
 
         <section class="imoveis">
-
-            
-
             <!-- <div class="imovel">
                 <img class="img-imovel" src="../imagens-imoveis/apartamento 027.jpg" alt="">
                 <div class="informacoes-imovel">
-                    <p class="tipo-imovel">Apartamento</p>
-                    <p class="area-construida-imovel">Área construida: 122m²</p>
-                    <p class="area-total-imovel">Área total: 0m²</p>
-                    <p class="endereco-imovel">Rua João Marcon, 283 - 0, bairro Boituva, CEP: 18550-000</p>
+                    <p class="tipo-imovel">Apartamento em Santa Teresa</p>
+                    <p class="tipo-detalhes area-construida-imovel">Área construida: 122m²</p>
+                    <p class="tipo-detalhes area-total-imovel">Área total: 0m²</p>
+                    <p class="tipo-detalhes endereco-imovel">Rua João Marcon, 283 - 0, bairro Boituva, CEP: 18550-000</p>
                 </div>
             </div> -->
-
         </section>
 
     </main>
@@ -120,6 +116,7 @@
     
           <nav class="menu-footer">
             <a href="../Home/home.html">Home</a>
+            <a href="../Adicionar-imoveis/adicionar-imoveis.html">Adicionar Imóveis</a>
             <a href="#top-pesquisa">Pesquisar-Imoveis</a>
             <a href="../Contato/contato.html">Contato</a>
           </nav>
