--- a/Contato/contato.html
+++ b/Contato/contato.html
@@ -29,7 +29,7 @@
   <div id="top-contato">.</div>
   <main>
     <section class="section-form form-contato">
-      <form class="form">
+       <form class="form"><!-- form para o usuáario preencher dados pessoais  -->
         <div class="contato-titulo">
           <h1>Entre em Contato</h1>
         </div>
@@ -52,13 +52,13 @@
           </div>
 
 
-          <div class="input-mensagem">
+           <div class="input-mensagem"><!-- para mensagem usei text area por ser um espaço maior -->
             <p><label for="mensagem">Mensagem: </label></p>
             <textarea name="mensagem" id="mensagem" cols="50" rows="12"></textarea>
           </div>
         </div>
 
-        <div class="checked-area">
+         <div class="checked-area"><!-- div para o usuário selecionar o motivo da interação -->
           <div class="checked-titulo">
             <h6>Motivo da Interação: </h6>
           </div>
@@ -98,48 +98,26 @@
 
     <div id="top-contato">.</div>
 
-    <section class="section-form form-ofertas">
-      <form class="form">
+    <section class="section-form form-ofertas"> <!-- Section pai (toda a box de ofertas) -->
+       <form class="form"> <!-- Início do formulário de contatos -->
         <div class="contato-titulo">
           <h1>Ofertas</h1>
         </div>
 
-        <!-- <div class="input-group">
-          <div class="input-box">
-            <label for="nomeSobrenome">Em que tipo de imóvel você tem interesse? </label>
-            <input id="nomeSobrenome" type="text" name="nomeSobrenome" placeholder="Digite seu nome e sobrenome"
-              required>
-          </div>
+        <!-- Tipos de imóveis que o cliente tem mais interesse -->
 
-          <div class="input-box">
-            <label for="email">E-mail: </label>
-            <input id="email" type="email" name="email" placeholder="Digite seu e-mail" required>
-          </div>
-
-          <div class="input-box">
-            <label for="numero">Celular: </label>
-            <input id="inNumero" type="tel" name="numero" placeholder="(xx) xxxx-xxxx" required>
-          </div>
-
-
-          <div class="input-mensagem">
-            <p><label for="mensagem">Mensagem: </label></p>
-            <textarea name="mensagem" id="mensagem" cols="50" rows="12"></textarea>
-          </div>
-        </div> -->
-
-        <div class="checked-area">
+        <div class="checked-area"><!-- Div para alterar todos os inChecked e o titulo de uma vez -->
           <div class="checked-titulo">
             <h6>Em quais tipos de imóveis você tem mais interesse? </h6>
           </div>
 
-          <div class="checked-grupo">
+          <div class="checked-grupo"> <!-- Div para alterar todos os inChecked de uma vez -->
             <div class="inChecked">
               <input id="apartamento" type="checkbox" name="ofertas">
               <label for="apartamento">Apartamento </label>
             </div>
 
-            <div class="inChecked">
+             <div class="inChecked"> <!-- div para estilizar cada checkbox individualmente -->
               <input id="casa" type="checkbox" name="ofertas">
               <label for="casa">Casa </label>
             </div>
@@ -165,17 +143,18 @@
             </div>
           </div>
         </div>
+
+        <!-- Preferência de forma de contato -->
+
         <div class="checked-area preferencia-contato">
           <div class="checked-titulo titulo-preferencia">
             <h6>Em qual plataforma prefere ser contatado? </h6>
           </div>
-
           <div class="checked-grupo">
             <div class="inChecked">
               <input id="whatsapp" type="checkbox" name="ofertas">
               <label for="whatsapp">Whatsapp </label>
             </div>
-
             <div class="inChecked">
               <input id="e-mail" type="checkbox" name="ofertas">
               <label for="e-mail">E-mail </label>
@@ -183,6 +162,7 @@
           </div>
           </div>
 
+          <!-- seleção de lugares que o comprador prefere receber notificações de imóveis disponiveis -->
           <div class="checked-area">
             <div class="checked-titulo titulo-cidade-estado">
               <h6>Em que lugar esta sua preferência de imóveis? </h6>
@@ -224,7 +204,7 @@
               <input type="text" class="cidade-estado-ofertas">
             </div>
           </div>
-          
+          <!-- botão enviar de ofertas -->
           <input type="submit" class="bt-enviar bt-ofertas">
       </form>
     </section>
@@ -243,7 +223,6 @@
       </nav>
 
     </section>
-
   </footer>
   <script src="contato.js"></script>
 </body>
