Alteração do texto home

--- a/Home/home.html
+++ b/Home/home.html
@@ -37,9 +37,7 @@
         </section>
         <section class="sobre">
             <h1 class="sobre-titulo"> Sobre a Dreams</h1>
-            <p class="sobre-escrita">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam officia
-                repellendus quidem illo praesentium aliquid vero at quam impedit ex quo placeat, vitae nisi maiores
-                voluptates ipsum hic labore corrupti.</p>
+            <p class="sobre-escrita">Somos uma empresa especializada em venda e locação de imóveis, fundada em meados de 1989, com o objetivo de realizar o sonho de muitos brasileiros! E a busca pela excelência e profissionalismo fez com que cheguemos onde estamos hoje, contamos com mais de 2 mil vendas ao todo, e mais de 100 vendas anuais! Prestamos um trabalho com qualidade e transparência, visando sempre entregar o melhor para nossos clientes.</p>
         </section>
 
         <section class="tipo-imoveis">
